# SHL-Recommendation-System

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py  config.py  generation_api.py  retrieval.py  url_handler.py
app/data/: shl_product_details.csv
app/prepocessing/: crawl_pages.py  fix_last_col.py  get_urls.py  save_catalog.py
app/prepocessing/data/: shl_product_details.csv  shl_products.csv
tests/: test.py
