[tool.poetry]
name = "shl-rag"
version = "0.1.0"
description = ""
authors = ["jazz023 <jashikasethi06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dotenv = "^0.9.9"
qdrant-client = "^1.13.3"
llama-index = "^0.12.28"
llama-index-embeddings-ollama = "^0.6.0"
groq = "^0.22.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"
streamlit = "^1.44.1"
streamlit-chat = "^0.1.1"
google-generativeai = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
